// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Logo Logo should match with snapshot when logo mode is "LIGHT" and page is not MAIN 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link logo__link--light"
    href="/"
    onClick={[Function]}
    style={Object {}}
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;

exports[`Render Logo Logo should match with snapshot when logo mode is "NORMAL" and page is MAIN 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link false"
    href="/"
    onClick={[Function]}
    style={
      Object {
        "pointerEvents": "none",
      }
    }
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;
